--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@ html {
     --color-white-5: rgba(255, 255, 255, .05);
     --color-primary: #FBC000;
     --color-hover: #F86A05;
-    --color--area: #1C212E;
+    --color-area: #1C212E;
 }
 body {
     background-color: var(--color-black);
@@ -23,6 +23,32 @@ body {
     padding: 40px 0;
 }
 
+.btn {
+    height: 50px;
+    padding: 0 20px;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--color-white);
+    background-color: var(--color--area);
+    cursor: pointer;
+    transition: .3s;
+}
+.btn:hover {
+    background-color: var(--color-hover);
+}
+.btn-primary {
+    background-color: var(--color-primary);
+    color: var(--color-black);
+}
+.btn-primary:hover {
+    background-color: var(--color-hover);
+    color: var(--color-white);
+  }
+
+  
 .headline {
     margin-bottom: 40px;
 }
@@ -39,3 +65,30 @@ body {
 .headline p {
     color: var(--color-white-30);
 }
+
+
+/* components/Search */
+.search {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+  .search input {
+    flex-grow: 1;
+    height: 50px;
+    padding: 0 20px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    color: var(--color-white);
+    background-color: var(--color-area);
+  }
+  .search input::placeholder {
+    color: var(--color-white-30);
+  }
+  .search .btn {
+    flex-grow: 1;
+    max-width: 150px;
+  }
+
