--- a/src/main.css
+++ b/src/main.css
@@ -49,6 +49,26 @@ body {
   }
 
   
+  /* Default Loading Animation */
+.the-loader {
+    width: 30px;
+    height: 30px;
+    margin: 30px auto;
+    border: 4px solid var(--color-primary);
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: loader 1s infinite linear;
+  }
+  .the-loader.hide {
+    display: none;
+  }
+  @keyframes loader {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  
+  
 .headline {
     margin-bottom: 40px;
 }
@@ -98,40 +118,39 @@ body {
     border-radius: 4px;
     background-color: var(--color-area);
   }
-  .movie-list .message {
+.movie-list .message {
     color: var(--color-primary);
     font-size: 20px;
     text-align: center;
-  }
-  .movie-list .movies {
+}
+.movie-list .movies {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
   }
   
-  
   /* components/MovieItem */
-  .movies .movie {
+.movies .movie {
     --width: 200px;
     width: var(--width);
     height: calc(var(--width) * 3 / 2);
     border-radius: 4px;
-    background-color: var(--color-black);
-    background-size: cover;
-    overflow: hidden;
-    position: relative;
-  }
-  .movies .movie:hover::after {
+  background-color: var(--color-black);
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+}
+.movies .movie:hover::after {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border: 6px solid var(--color-primary);
-  }
-  .movies .movie .info {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border: 6px solid var(--color-primary);
+}
+.movies .movie .info {
     background-color: rgba(14,17,27,.3);
     backdrop-filter: blur(10px);
     width: 100%;
@@ -139,15 +158,25 @@ body {
     box-sizing: border-box;
     font-size: 14px;
     text-align: center;
-    position: absolute;
+    position: absolute; 
     left: 0;
     bottom: 0;
-  }
-  .movies .movie .info .year {
+}
+.movies .movie .info .year {
     color: var(--color-primary);
-  }
+}
   .movies .movie .info .title {
-    color: var(--color-white);
+  color: var(--color-white);
+}
+
+/* components/MovieListMore */
+.view-more {
+    width: 100%;
+    max-width: 300px;
+    margin: 20px auto;
+    display: block;
+  }
+  .view-more.hide {
+    display: none;
   }
   
-
