--- a/src/main.css
+++ b/src/main.css
@@ -68,7 +68,34 @@ body {
   }
 
   
+/* Skeleton Loading Animation */
+.skeleton {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: var(--color-area);
+  }
+  .skeleton::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(270deg,
+      rgba(255,255,255,0),
+      rgba(255,255,255,.1),
+      rgba(255,255,255,0)
+    );
+    transform: translateX(-100%);
+    animation: skeleton-loader 2s infinite;
+  }
+  @keyframes skeleton-loader {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+  }
 
+  
 .headline {
     margin-bottom: 40px;
 }
@@ -206,13 +233,24 @@ body {
     color: var(--color-white);
     margin-bottom: 30px;
   }
+  .the-movie .title.skeleton {
+    height: 70px;
+  }
+
   .the-movie .labels {
     color: var(--color-primary);
     margin-bottom: 20px;
+  }
+  .the-movie .labels.skeleton {
+    height: 30px;
+  }
+  .the-movie .plot.skeleton {
+    width: 80%;
+    height: 400px;
   }
   .the-movie h3 {
     font-family: "Oswald", sans-serif;
     font-size: 20px;
     color: var(--color-white);
     margin: 24px 0 6px;
-  }
+  } 
