--- a/src/main.css
+++ b/src/main.css
@@ -147,6 +147,19 @@ header {
   header .user img {
     width: 100%;
   }
+
+/* components/TheFooter */
+footer {
+    padding: 40px 40px 60px;
+    text-align: center;
+  }
+  footer a {
+    color: var(--color-white-20);
+    text-decoration: none;
+  }
+  footer a:hover {
+    text-decoration: underline;
+  }
   
 .headline {
     margin-bottom: 40px;
