반응형 구현

--- a/src/main.css
+++ b/src/main.css
@@ -23,6 +23,17 @@ body {
     padding: 40px 0;
 }
 
+@media (max-width: 1200px) {
+    .container {
+      padding: 40px;
+    }
+  }
+  @media (max-width: 600px) {
+    .container {
+      padding: 40px 20px;
+    }
+  }
+
 .btn {
     height: 50px;
     padding: 0 20px;
@@ -148,6 +159,19 @@ header {
     width: 100%;
   }
 
+  @media (max-width: 600px) {
+    header {
+      padding: 14px 20px;
+    }
+    header nav {
+      display: none;
+    }
+    header .user {
+      right: 20px;
+    }
+  }
+  
+
 /* components/TheFooter */
 footer {
     padding: 40px 40px 60px;
@@ -160,6 +184,8 @@ footer {
   footer a:hover {
     text-decoration: underline;
   }
+  
+
   
 .headline {
     margin-bottom: 40px;
@@ -177,6 +203,12 @@ footer {
 .headline p {
     color: var(--color-white-30);
 }
+
+@media (max-width: 600px) {
+    .headline h1 {
+      font-size: 60px;
+    }
+  }
 
 
 /* components/Search */
@@ -320,6 +352,23 @@ footer {
     margin: 24px 0 6px;
   } 
 
+  @media (max-width: 1200px) {
+    .the-movie {
+      gap: 30px;
+    }
+    .the-movie .poster {
+      --width: 300px;
+    }
+  }
+  @media (max-width: 720px) {
+    .the-movie {
+      display: block;
+    }
+    .the-movie .title {
+      font-size: 50px;
+      margin-top: 50px;
+    }
+  }
 
   /* routes/About */
 .about .photo {
